routing and xml conversion

--- a/app.properties
+++ b/app.properties
@@ -1,2 +1,2 @@
-frontend.url = http://example.com/
-backend.rest = https://jsonplaceholder.typicode.com/todos
+frontend.url = http://covid-19-estimator.tk
+backend.rest = http://covid-19-estimator.tk/api/v1/on-covid-19
